--- a/requirements.txt
+++ b/requirements.txt
@@ -39,3 +39,31 @@ safetensors==0.3.3
 datasets==2.14.5
 einops==0.6.1
 xformers==0.0.22
+
+# Agent tools dependencies
+requests==2.31.0
+beautifulsoup4==4.12.2
+lxml==4.9.3
+pillow==10.0.1
+sympy==1.12
+nltk==3.8.1
+spacy==3.6.1
+tiktoken==0.5.1
+
+# Evaluation framework
+rouge-score==0.1.2
+sacrebleu==2.3.1
+evaluate==0.4.1
+bert-score==0.3.13
+
+# Web-related
+flask==2.3.3
+fastapi==0.103.1
+uvicorn==0.23.2
+gradio==3.44.4
+
+# Misc utilities
+tqdm==4.66.1
+colorama==0.4.6
+rich==13.5.3
+typer==0.9.0
